genium/src/test/resources/smoke/errors/output/lime/smoke/SomeTypeCollection.lime
package smoke

types SomeTypeCollection {
    enum SomeTypeCollectionError {
        ERROR_A,
        ERROR_B
    }
    exception SomeTypeCollectionErrorException(SomeTypeCollectionError)
}
